# clean-python-project

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  constraints.txt  example_usage.py  noxfile.py  pyproject.toml  setup.sh  setup_github_repo.sh  test_nox.py
.claude/: settings.json
.claude/hooks/: python_final_quality_check.sh  python_quality_check.sh
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: ci.yaml  ci.yml  claude.yml
constraints/: python3.12-linux-x86_64.txt
src/test_project/: __init__.py  main.py
src/test_project/utils/: __init__.py  file_handler.py  logger.py  otel_exporter.py  settings.py
tests/: __init__.py  conftest.py  test_example.py
tests/e2e/test_project/: __init__.py
tests/e2e/test_project/utils/: test_file_handler_integration.py  test_logging_integration.py  test_otel_logging_integration.py
tests/fixtures/: sample_data.json  sample_data.yaml  sample_text_cp932.txt  sample_text_utf8.txt
tests/unit/test_project/: __init__.py
tests/unit/test_project/utils/: test_file_handler.py  test_logger.py  test_otel_exporter.py  test_settings.py
