[project]
name = "YOUR_PROJECT_NAME"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "load-dotenv>=0.1.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.9.1",
]
[project.optional-dependencies]
docs = [
    "sphinx>=8.1.2",
    "mkdocs-material>=9.5.0",
]
tests = [
    "freezegun>=1.5.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.5.0",
    "responses>=0.25.3",
    "diff-cover>=8.0.0",
]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
    "safety>=2.3.0",
    "pre-commit>=4.0.1",
    "commitizen>=3.20.0",
    "python-semantic-release>=8.10.0",
    "py-spy>=0.3.0",
    "scalene>=1.5.0",
    "hatch>=1.8.0",
    "pdm>=2.12.0",
]
openai = [
    "openai>=1.51.2",
    "tiktoken>=0.8.0",
]

[tool.uv]
dev-dependencies = [
    "nox>=2024.10.9",
    "pre-commit>=4.0.1",
    "ruff>=0.6.9",
    "pyright>=1.1.402",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
     "COM812", "COM819",
     "D100", "D203", "D213", "D300",
     "E111", "E114", "E117",
     "ISC001", "ISC002",
     "Q000", "Q001", "Q002", "Q003",
     "W191",
     "T",
     "D",
 ]

# testsディレクトリ配下のみにS101を無効化
per-file-ignores = { "tests/*" = ["S101"] }

 # Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    "venv",
    ".nox",
    "build",
    "dist",
]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
pythonpath = [ "src"]
testpaths = [
  "tests"
]
addopts = "-v --cov=src -ra --strict-markers"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks integration tests"
]
minversion = "8.0"
python_files = "test_*.py"

[dependency-groups]
dev = [
    "pyright>=1.1.402",
]
