[project]
name = "test-project-alpha"
version = "0.1.0"
description = "An alpha test project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [] # Populated by user or later steps if needed

[project.optional-dependencies]
tests = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "freezegun>=1.5.1",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.5.0",
    "responses>=0.25.3",
    "diff-cover>=8.0.0",
]
dev = [
    # Example: "black>=24.0.0", "ruff>=0.6.9"
    # For this template, nox handles tool invocation.
    # This section is if users want 'uv pip install .[dev]'
]
docs = [
    "mkdocs-material>=9.5.0",
]

[tool.uv]
# These are the development tools installed by 'uv sync' if no specific extras are chosen,
# or if these are not specified in [project.optional-dependencies.dev] for 'uv pip install .[dev]'
# For this project template, these are the primary dev tools managed by nox.
dev-dependencies = [
    "nox>=2024.10.9",
    "pre-commit>=4.0.1",
    "ruff>=0.6.9",
    "pyright>=1.1.402",
    "pip-audit>=2.7.1",
    "bandit>=1.7.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213"] # Keep it minimal for placeholders

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.pyright]
include = ["src/alpha_lib"] # This will be replaced by setup.sh
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    "venv",
]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --cov=src/alpha_lib -ra --strict-markers" # This will be replaced by setup.sh
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks integration tests"
]
